src/vm/snapshots/hebi__vm__tests__more_optional_access.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
"a" ?? "b"


# Result:
Object(
    "a",
)
