src/vm/snapshots/hebi__vm__tests__nested_optional_access.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := none

?v.a["b"].c ?? "test"


# Result:
Object(
    "test",
)
