src/vm/snapshots/hebi__vm__tests__nested_table.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := {a: {b: 10}}
v


# Result:
Ok(
    Object(
        {
            "a": Object(
                {
                    "b": Int(
                        10,
                    ),
                },
            ),
        },
    ),
)
