src/vm/snapshots/hebi__vm__tests__order_of_eval.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
a := 1
fn f():
  a += 1
  return a
print (a + f())


# Result:
None

# Output:
3

