src/vm/snapshots/hebi__vm__tests__simple_class_derived.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T: pass
class U(T): pass
U


# Result:
Ok(
    Object(
        ClassType {
            name: "U",
            init: None,
            fields: {},
            methods: {},
            parent: Some(
                ClassType {
                    name: "T",
                    init: None,
                    fields: {},
                    methods: {},
                    parent: None,
                },
            ),
        },
    ),
)
