src/vm/snapshots/hebi__vm__tests__simple_data_class.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 0
T


# Result:
Ok(
    Object(
        ClassType {
            name: "T",
            init: None,
            fields: {
                "v": Int(
                    0,
                ),
            },
            methods: {},
            parent: None,
        },
    ),
)
