src/vm/snapshots/hebi__vm__tests__simple_data_class_derived.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T: pass
class U(T):
  v = 0
U


# Result:
Object(
    ClassType {
        name: "U",
        init: None,
        fields: {
            "v": Int(
                0,
            ),
        },
        methods: {},
        parent: Some(
            ClassType {
                name: "T",
                init: None,
                fields: {},
                methods: {},
                parent: None,
            },
        ),
    },
)
