src/vm/snapshots/hebi__vm__tests__string_comparison.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
print "'a' <  'b'", "a" <  "b"
print "'b' >= 'a'", "b" >= "a"

print "'b' <  'a'", "b" <  "a"
print "'a' >= 'b'", "a" >= "b"

print "'a' == 'b'", "a" == "b"
print "'b' == 'a'", "a" == "b"
print "'a' == 'a'", "a" == "a"


# Result:
None

# Output:
'a' <  'b' true
'b' >= 'a' true
'b' <  'a' false
'a' >= 'b' false
'a' == 'b' false
'b' == 'a' false
'a' == 'a' true

