src/vm/snapshots/hebi__vm__tests__table_access_keyed.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := {a: 10}
v["a"]


# Result:
Int(
    10,
)
