src/vm/snapshots/hebi__vm__tests__table_access_named.snap
---
source: src/vm/tests.rs
expression: snapshot
---
Err(
    Vm(
        SpannedError {
            span: Span {
                start: 0,
                end: 0,
            },
            message: "`<table>` does not support field access",
        },
    ),
)
